PROD4POD-1187/-1203: fix fonts and spacing to align with figma

--- a/features/polyExplorer/src/components/dataRegionsLegend/dataRegionsLegend.css
+++ b/features/polyExplorer/src/components/dataRegionsLegend/dataRegionsLegend.css
@@ -1,12 +1,12 @@
 .location-legend {
-    margin: 12px 30px 0 30px;
+    margin: 16px 16px 0 16px;
 }
 
 .location-legend p {
     flex: 0 0 auto;
-    font-weight: 500;
+    font-family: "Jost Medium";
     font-size: 10px;
-    line-height: 14px;
+    line-height: 12px;
     color: var(--color-medium);
     height: 12px;
 }
@@ -20,12 +20,13 @@
 
 .location-legend .source p {
     margin: 0;
+    font-size: 12px;
 }
 
 .location-legend .legend {
     flex: 0 0 auto;
     width: 172px;
-    height: 26px;
+    margin-bottom: 24px;
     display: flex;
     flex-direction: row;
 }
