--- a/features/polyExplorer/src/screens/entityDetails/companyRevenueChart/companyRevenueChart.css
+++ b/features/polyExplorer/src/screens/entityDetails/companyRevenueChart/companyRevenueChart.css
@@ -13,14 +13,15 @@
 .revenue-chart-container .gridline {
     position: absolute;
     box-sizing: border-box;
-    left: 12%;
-    width: 80%;
+    left: 12.5%;
+    width: 83%;
     height: 1px;
     background-color: var(--color-semi-dark);
 }
 
 .revenue-chart-container .x-axis {
     position: absolute;
+    font-family: "Jost Medium";
     font-size: 10px;
     top: 88%;
     color: var(--color-semi-dark);
@@ -29,15 +30,17 @@
 
 .revenue-chart-container .y-axis {
     position: absolute;
+    font-family: "Jost Medium";
     font-size: 10px;
-    left: 7%;
+    left: 4.444%;
     transform: translateY(6px);
 }
 
 .revenue-chart-container .unit {
     position: absolute;
+    font-family: "Jost Medium";
     font-size: 12px;
-    transform: translate(33px, -17px);
+    transform: translate(16px, -22px);
 }
 
 .revenue-chart-container .bar {
@@ -51,9 +54,10 @@
 }
 
 .revenue-chart-container .source {
-    margin-left: 10%;
+    margin-left: 4.444%;
     margin-top: 2px;
-    font-size: 10px;
+    font-family: "Jost Medium";
+    font-size: 12px;
     color: var(--color-semi-dark);
 }
 
